# ferron

./: .gitignore  2026-07-23-111405-local-command-caveatcaveat-the-messages-below.txt  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/ferron-ecs/: Cargo.toml
crates/ferron-ecs/src/: lib.rs
crates/ferron-script/: .gitignore  Cargo.toml
crates/ferron-script/examples/: spike.rs
crates/ferron-script/src/: lib.rs
crates/ferron-script/tests/: lifecycle.rs
crates/renderer/: Cargo.toml
crates/renderer/shaders/: forward.frag  forward.vert  fullscreen.vert  line.vert  ssao.frag  ssao_blur.frag  ssao_prepass.frag  ssao_prepass.vert  tonemap.frag
crates/renderer/src/: app.rs  camera_controller.rs  lib.rs  scripting.rs  stats.rs  systems.rs
crates/renderer/src/collision/: bvh.rs  mod.rs  narrowphase.rs
crates/renderer/src/editor/: mod.rs  state.rs  theme.rs
crates/renderer/src/editor/panels/: console.rs  environment.rs  hierarchy.rs  inspector.rs  mod.rs  performance.rs
crates/renderer/src/gfx/: mod.rs
crates/renderer/src/gfx/vulkan/: context.rs  forward.rs  hdr.rs  line.rs  mod.rs  ssao.rs  swapchain.rs  texture.rs
crates/renderer/src/scene/: assets.rs  camera.rs  debug.rs  hdr.rs  input.rs  mesh.rs  mod.rs  ssao.rs  time.rs  transform.rs
crates/renderer/src/scene/components/: collider.rs  light.rs  local_transform.rs  material_handle.rs  mesh_handle.rs  mod.rs  name.rs  script.rs  spin.rs  tag.rs
crates/renderer/src/scene/entities/: mod.rs  scene.rs  textures.rs
docs/: architecture.md
scripting/Ferron/: Behaviour.cs  Behaviours.cs  Bootstrap.cs  Collider.cs  Collision.cs  ComponentKind.cs  Debug.cs  Entity.cs  Ferron.csproj  Input.cs  Native.cs  Tag.cs  Time.cs  Transform.cs  World.cs
scripting/Ferron.MathTests/: Ferron.MathTests.csproj  Program.cs
scripting/Ferron/Demo/: CollisionDemo.cs  DebugProbe.cs  Game.cs  Hover.cs  QueryTest.cs  Spinner.cs
scripting/Ferron/Math/: Color.cs  Mathf.cs  Quaternion.cs  README.md  Vector2.cs  Vector3.cs  Vector4.cs
scripting/Ferron/Tests/: LifecycleProbes.cs
scripting/SampleGame/: SampleGame.csproj  Spinner.cs
src/: app.rs  lib.rs  main.rs
src/gfx/: mod.rs
src/gfx/vulkan/: forward.rs  mod.rs  swapchain.rs
src/scene/: mod.rs
