[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ferron-ecs = { path = "crates/ferron-ecs" }
vulkano = "0.35"
vulkano-shaders = "0.35"
winit = "0.30"
glam = { version = "0.30", features = ["bytemuck"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
